4.8.1:
  * Support for "DB_ENV->mutex_set_align" and
    "DB_ENV->mutex_get_align".

4.8.0:
  * Support for Berkeley DB 4.8.
  * Compatibility with Python 3.1.
  * The "DB_XIDDATASIZE" constant has been renamed
    to "DB_GID_SIZE". Update your code!. If linked
    to BDB 4.8, only "DB_GID_SIZE" is defined.
    If linked to previous BDB versions, we keep
    "DB_XIDDATASIZE" but define "DB_GID_SIZE" too,
    to be the same value. So, new code can use
    the updated constant when used against old
    BDB releases.
  * "DB_XA_CREATE" is removed. BDB 4.8 has eliminated
    XA Resource Manager support.
  * Drop support for Berkeley DB 4.0. Our reference
    is Red Had Enterprise Linux 3, until October 2010.
    After that, RHEL4 has Python 2.3 and BDB 4.2.
  * Remove "DBIncompleteError" exception. It was only
    used in BDB 4.0.
  * Remove "DB_INCOMPLETE", "DB_CHECKPOINT",
    "DB_CURLSN". They came from BDB 4.0 too.
  * RPC is dropped in Berkeley DB 4.8. The bindings
    still keep the API if you link to previous BDB
    releases.
  * In recno/queue databases, "set_re_delim()" and "set_re_pad()"
    require a byte instead of a unicode char, under Python3.
  * Support for "DB_ENV->mutex_set_max()" and "DB_ENV->mutex_get_max()".

4.7.6:
  * Compatibility with Python 3.0.1.
  * Add support for "DB_ENV->stat()" and "DB_ENV->stat_print()".
  * Add support for "DB_ENV->rep_set_clockskew()" and
    "DB_ENV->rep_get_clockskew()". The binding support
    for base replication is now complete.
  * "DB.has_key()" used to return 0 or 1. Changed to return
    True or False instead. Check your code!.
  * As requested by several users, implement "DB.__contains__()",
    to allow constructions like "if key in DB" without
    iterating over the entire database. But, BEWARE, this
    test is not protected by transactions!. This is the same
    problem we already have with "DB.has_key()".
  * Change "DBSequence.init_value()" to "DBSequence.initial_value()",